--- a/CSS/05_coming_soon/style.css
+++ b/CSS/05_coming_soon/style.css
@@ -1,9 +1,15 @@
+
+@import url('https://fonts.googleapis.com/css2?family=New+Amsterdam&display=swap');
+
 html, body{
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    /*background-color:   #4cb2f5;*/
-    height: 100%;
+    
+        font-family: "New Amsterdam", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        height: 100%;
+        letter-spacing: 1px;
 }
 
 .container{
@@ -16,11 +22,63 @@ html, body{
 .content{
     text-align: center; 
     background-color: white; 
-    padding: 10px;
+    padding: 50px;
+    align-self: center;
+    border-radius: 12px;
+    height: auto;
 }
 
 .logo{
-    width: 500px;
-    height: 350px;
+    margin-top: 0;
+    width: 350px;
     object-fit: contain;
+}
+
+h1 { 
+    color: black;
+    letter-spacing: 2px;
+    font-size: 45px;
+    margin: 0;
+    padding: 0;
+}
+
+h2{
+    color: #8a2be2;
+    letter-spacing: 2px;
+    font-size: 40px;
+    margin: 0;
+    padding: 0;
+}
+
+p{
+    color: rgb(211, 124, 1);
+    
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+input{
+    padding: 10px;
+    margin-bottom: 10px;
+    width: 200px;
+}
+
+button{
+    padding: 10px;
+    border-radius: 8px;
+    background-color: #8a2be2;
+    color: #fff;
+    border: none;
+    width: 200px;
+    cursor: pointer;
+    transition: background-color 0.4s ease-in-out ;
+    
+}
+
+button:hover{
+    background-color: black;
 }
